[package]
name = "thingy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "entities"
path = "src/entities.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs = "1.2.0"
glam = "0.22.0"
rayon = "1.5.3"
thiserror = "1.0.37"
uuid = { version = "1.2.1", features = ["v4"] }
